deploy/k8s/deployment.yaml
# Generated by IBM TransformationAdvisor
# Thu Feb 22 12:29:04 UTC 2024
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: modresortsx2
  name: modresortsx2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: modresortsx2
  template:
    metadata:
      labels:
        app: modresortsx2
    spec:
      containers:
        - image: IMAGE_REFERENCE
          imagePullPolicy: Always
          name: modresortsx2
          ports:
            - containerPort: 9080
              protocol: TCP
