deploy/k8s/service.yaml
# Generated by IBM TransformationAdvisor
# Thu Feb 22 12:29:04 UTC 2024
apiVersion: v1
kind: Service
metadata:
  labels:
    app: modresortsx2
  name: modresortsx2
spec:
  type: NodePort
  ports:
    - name: http
      port: 9080
      targetPort: 9080
  selector:
    app: modresortsx2
