deploy/k8s/route.yaml
# Generated by IBM TransformationAdvisor
# Thu Feb 22 12:29:04 UTC 2024
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: modresortsx2
  name: modresortsx2
spec:
  path:
    /
  port:
    targetPort: http
  to:
    kind: Service
    name: modresortsx2
    weight: 100
